--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O Enigma da Besta do Apocalipse</title>
+    
+    <!-- SEO Meta Tags -->
+    <title>O Enigma da Besta: Manual de Batalha Espiritual | Consciente do Reino</title>
+    <meta name="description" content="Explore o significado da Besta do Apocalipse, o Falso Profeta e os 7 Montes da Sociedade. Um infográfico interativo baseado na aula de Mayko Rodrigues para equipar o crente moderno.">
+    <meta name="keywords" content="escatologia bíblica, besta do apocalipse, 666, falso profeta, 7 montes, Mayko Rodrigues, consciente do reino, estudo bíblico, apocalipse, anticristo, manual de batalha espiritual">
+    <meta name="author" content="Mayko Rodrigues - Consciente do Reino">
+    <link rel="canonical" href="https://enigmadabesta.conscientedoreino.com.br/">
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://enigmadabesta.conscientedoreino.com.br/">
+    <meta property="og:title" content="O Enigma da Besta: Manual de Batalha Espiritual | Consciente do Reino">
+    <meta property="og:description" content="Explore o significado da Besta do Apocalipse, o Falso Profeta e os 7 Montes da Sociedade. Um infográfico interativo para equipar o crente moderno.">
+    <meta property="og:image" content="https://placehold.co/1200x630/00446A/90E0EF?text=O+Enigma+da+Besta">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="enigmadabesta.conscientedoreino.com.br">
+    <meta property="twitter:url" content="https://enigmadabesta.conscientedoreino.com.br/">
+    <meta name="twitter:title" content="O Enigma da Besta: Manual de Batalha Espiritual | Consciente do Reino">
+    <meta name="twitter:description" content="Explore o significado da Besta do Apocalipse, o Falso Profeta e os 7 Montes da Sociedade. Um infográfico interativo para equipar o crente moderno.">
+    <meta name="twitter:image" content="https://placehold.co/1200x630/00446A/90E0EF?text=O+Enigma+da+Besta">
+
+    <!-- Scripts and Styles -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -87,6 +110,32 @@
             border-radius: 4px;
         }
     </style>
+     <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "O Enigma da Besta: Manual de Batalha Espiritual | Consciente do Reino",
+      "description": "Explore o significado da Besta do Apocalipse, o Falso Profeta e os 7 Montes da Sociedade. Um infográfico interativo baseado na aula de Mayko Rodrigues para equipar o crente moderno.",
+      "url": "https://enigmadabesta.conscientedoreino.com.br/",
+      "author": {
+        "@type": "Person",
+        "name": "Mayko Rodrigues"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Consciente do Reino",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://placehold.co/200x60/00446A/FFFFFF?text=Consciente+do+Reino"
+        }
+      },
+      "mainEntity": {
+        "@type": "WebPageElement",
+        "cssSelector": "main"
+      }
+    }
+    </script>
 </head>
 <body class="bg-[#e0f7fa]">
 
